Terraform/module/aws/aws_security_group.tf
resource "aws_security_group" "mcking_security_group" {
  name        = "mcking-security-group"
  description = "Security group de acesso geral"
  vpc_id      = aws_vpc.mcking_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "mcking-security-group"
  }
}
